# TosConOp-3d-grain-segmentation

./: CMakeLists.txt  README.md
include/: tree_of_shapes.h  tree_of_shapes_edit.h  ttos_grain_analysis.h  ttos_grain_params.h  ttos_grain_pipeline.h  ttos_grain_qc.h  ttos_grain_types.h
src/: main.cpp  tree_of_shapes.cpp  tree_of_shapes_edit.cpp  ttos_grain_analysis.cpp  ttos_grain_pipeline.cpp  ttos_grain_qc.cpp
